tests/records/ill-typed/bad-records-3.stella
language core;
extend with #records;

fn getSome(p : {x : Nat, y : Nat, z : Bool}) -> Nat {
  return p.z
}

fn main(x : Nat) -> Nat {
  return getSome({x = x, y = succ(x), z = false})
}
